<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/main_back_button"
    android:layout_margin="@dimen/small_size">

    <TextView
        android:id="@+id/title_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/content_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_template"
        android:layout_marginVertical="@dimen/small_size"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/content"/>

    <TextView
        android:id="@+id/content_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="40dp"
        android:textDirection="anyRtl"
        android:layout_marginLeft="@dimen/x_medium"
        app:layout_constraintTop_toBottomOf="@+id/title_template"
        android:layout_marginVertical="@dimen/small_size"
        android:textIsSelectable="true"
        android:text=""/>

    <TextView
        android:id="@+id/date_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_template"
        android:layout_marginVertical="@dimen/small_size"
        android:text="@string/date"/>

    <TextView
        android:id="@+id/time_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_template"
        android:layout_marginVertical="@dimen/small_size"
        android:text="@string/time"/>

    <ImageView
        android:id="@+id/edit_schema"
        android:layout_width="55dp"
        android:layout_height="@dimen/x_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:clickable="true"
        android:background="@drawable/edit_icon"/>

    <ImageView
        android:id="@+id/delete_schema"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginVertical="@dimen/small_size"
        android:background="@drawable/delete_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0101"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/edit_schema" />


</android.support.constraint.ConstraintLayout>