<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/main_back">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintVertical_bias="0.04"
        android:text="@string/update_note"
        android:fontFamily="@font/adobe_naskh_medium"
        android:textSize="@dimen/medium_size"/>

    <EditText
        android:id="@+id/edit_title_update"
        android:layout_width="@dimen/xx_ultra"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintHorizontal_bias="0.93"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/id_content_update"
        android:layout_width="@dimen/xx_ultra"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.375"
        app:layout_constraintHorizontal_bias="0.93"
        android:hint="@string/content"/>

    <!--<EditText-->
    <!--android:id="@+id/id_date"-->
    <!--android:layout_width="@dimen/xx_ultra"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintVertical_bias="0.5"-->
    <!--app:layout_constraintHorizontal_bias="0.93"/>-->
    <!---->
    <!--<EditText-->
    <!--android:id="@+id/id_time"-->
    <!--android:layout_width="@dimen/xx_ultra"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintVertical_bias="0.625"-->
    <!--app:layout_constraintHorizontal_bias="0.93"/>-->

    <Button
        android:id="@+id/btn_reg_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:textSize="@dimen/medium_size"
        android:background="@drawable/main_back_button"
        android:text="@string/register"/>

</android.support.constraint.ConstraintLayout>